usability fix: reduce white space at top of page. Move page number down into footer.

--- a/css/css/mlearningstyle.css
+++ b/css/css/mlearningstyle.css
@@ -53,13 +53,16 @@ body{
 		  }
 		  
 	.row-fluid .span3{ width:auto; }
+	
+		
 	div#content{
 		float:none;
 		display:inline-block;
 		width:75%;
 		overflow:visible;
 		vertical-align: top;
-		margin-left:12px;
+		margin-left:3px;
+		padding:6px;
 	}
 	 
 a img { border:none;}
@@ -159,13 +162,18 @@ padding-top:2px;
 	padding:12px 6px 6px 6px;
 	}
 #spaceHolder{
-	width:100%;
-	height:35px;
+	/*width:100%;
+	height:35px;*/
+	width:auto;
+	height;auto;
+	float:left;
 }
 #utilitiesBar{
 	float:right;
-	line-height:0px;
-	margin:0 0 6px 24px;
+	/*line-height:0px;
+	margin:0 0 6px 24px;*/
+	line-height: 0;
+    margin: 0;
 }
 #progressBarContainer {
 	white-space:nowrap;
@@ -173,11 +181,12 @@ padding-top:2px;
 	vertical-align:top;
 } 
 #progressBarHolder {
-	border:1px solid black;
+	/*border:1px solid black;
 	padding:0px;
 	background-color:#FFF;
 	width:92px;
-	overflow:visible;
+	overflow:visible;*/
+	display:none;
 } 
 #progressBarHolder	img{
 	height:13px;
@@ -185,10 +194,16 @@ padding-top:2px;
 	padding:0px;
 }
 #pageNumHolder{
-	height:20px;
+	/*height:20px;
 	line-height:100%;
 	background-color:rgba (255, 0, 0, 0.4);
-	margin-bottom:-3px;
+	margin-bottom:-3px;*/
+	height: 20px;
+    line-height: 100%;
+    margin-bottom: -3px;
+    color:#fff;
+    font-size:small;
+    margin:3px 0 0 6px;
 }
 .nav-tabs > li {
 	margin-bottom:0px;
@@ -539,6 +554,7 @@ a.tryagainLink, a:visited.tryagainLink{
 	 margin-left:auto;
 	 margin-right:auto;
  }
+ 
  #quizMessages a.tryagainLink:hover, a.button:hover{
    background:#0046FF;}
  #quizMessages a.gothereLink:hover{background:#00FF33;}
